#483 Unit Tests. Mocks. Documentation.
